class_name PlayerScoreDisplay
extends Control

@onready var score: Label = $BG/score_bg/score_text
@onready var chips: Label = $BG/chips_n_mult_frame/chips_panel/chips_display_text
@onready var mult: Label = $BG/chips_n_mult_frame/mult_panel/mult_display_text
@onready var hand: Label = $BG/Name_Frame/round_score_bg/Hand_Name
